hello-kubernetes/applications/base/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kubernetes
  labels:
    app: hello-kubernetes
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-kubernetes
  template:
    metadata:
      labels:
        app: hello-kubernetes
        track: stable
    spec:
      containers:
      - name: hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.10
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kubernetes-canary
  labels:
    app: hello-kubernetes-canary
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-kubernetes-canary
  template:
    metadata:
      labels:
        app: hello-kubernetes-canary
        track: canary
    spec:
      containers:
      - name: hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.10
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes-stable
spec:
  type: ClusterIP
  selector:
    track: stable
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes-canary
spec:
  type: ClusterIP
  selector:
    track: canary
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hello-kubernetes
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`hello-kubernetes.example.local`)
      kind: Rule
      services:
        - name: hello-kubernetes-weighted
          kind: TraefikService
